--- a/android/app/src/main/res/layout/fragment_draw.xml
+++ b/android/app/src/main/res/layout/fragment_draw.xml
@@ -12,16 +12,14 @@
         android:id="@+id/amount_of_repetitions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         android:text="@string/amount_of_repetitions"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
         android:textColor="@color/active_button_text_color"
         app:layout_constraintBottom_toTopOf="@+id/seekbar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/canvasView" />
 
     <Button
@@ -126,5 +124,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.7" />
+
+    <CheckBox
+        android:id="@+id/save_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="Save Map"
+        android:textColor="@color/active_button_text_color"
+        app:layout_constraintBottom_toBottomOf="@+id/amount_of_repetitions"
+        app:layout_constraintEnd_toStartOf="@+id/amount_of_repetitions"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/amount_of_repetitions" />
 
 </android.support.constraint.ConstraintLayout>
