--- a/android/app/src/main/res/layout/fragment_google_maps.xml
+++ b/android/app/src/main/res/layout/fragment_google_maps.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/mapView" />
 
     <Button
-        android:id="@+id/start_car_button"
+        android:id="@+id/send_to_vehicle_button"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
